--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Hi, I'm <b>Sonia</b></h1>
-								<p>your new friend from Indonesia.<br />
+								<p>your friend from Indonesia.<br />
 								I sketch, write codes <b>AND</b>, of course, haiku.<br />
 								This way, let me guide you through my legacy.</p>
 							</div>
@@ -108,32 +108,69 @@ for c in range(nc):
 							<article id="galeri">
 								<h2 class="major">Gallery</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>I draw and sketch a lot when I'm bored in class. You can see here some of what I can save from a disaster. But my recent drawings are digital, and I'll show them first at the top because I'm so proud of them. They're some kind of coin I submitted for a contest in a really amazing <a href="https://www.renshuu.org/" target="_blank">Japanese learning site</a> I use. Click the images to take a closer look.</p>
+								<p><br/><b>PLEASE DO NOT STEAL!</b><br />Click at the images to take a closer look.</p>
+								<p>In the last autumn, I submitted some kind of coins for a contest in a really amazing Japanese learning site I use, <a href="https://www.renshuu.org/" target="_blank"><i>renshuu.org</i></a>. The coins used for a gacha system in that site. I'll show them first at the top row because they're so cute.</p>
 
 								<div class="gallery">
 									<img src="images/coin-acuteagawa-thumbnail.png" alt="Acutagawa" onclick="openModal('images/coin-acuteagawa.png')">
 									<img src="images/coin-hokuto-thumbnail.png" alt="The Big Dipper (Great Bear)" onclick="openModal('images/coin-hokuto.png')">
 									<img src="images/coin-maou-thumbnail.png" alt="The Devil Dance" onclick="openModal('images/coin-maou.png')">
-									<img src="images/syafiq-sketch-thumbnail.jpg" alt="Ahmad Syafiq Sketch" onclick="openModal('images/syafiq-sketch.jpg')">
 									<img src="images/syafiq-colored-thumbnail.png" alt="Ahmad Syafiq" onclick="openModal('images/syafiq-colored.png')">
+									<img src="images/logo-gnu.png" alt="GNU" onclick="openModal('images/logo-gnu.png')">
 									<img src="images/twilight-thumbnail.jpg" alt="Twilight" onclick="openModal('images/twilight.jpg')">
-									<img src="images/mirror-thumbnail.jpg" alt="Mirrors" onclick="openModal('images/mirror.jpg')">
 								</div>
+
+								<p><br/>This big painting below is my favorite. Painted with watercolor on paper, it's a scene in an anime called <i>Hakkenden</i>. It's so beautiful I'm obsessed. But, something is missing. <i>Can you guess what that is?</i></p>
+								<div class="gallery"><img src="images/hakkenden21.jpg" alt="" onclick="openModal('images/hakkenden.jpg')" ></div>
+
+								<p><br/>I don't know but I really love drawing eyes, and I actually have a collection of eyes I doodled on Google Keep on my phone's little screen. If you noticed, I was inspired by the 4 elements in <i>Avatar the Legend of Aang</i>, so... yeah. And in addition, a turquoise eye I painted (doodled) with watercolor on a little piece of paper. And some other Keep notes doodles.</p>
+								<div class="gallery">
+									<img src="images/Forest-thumbnail.png" alt="ATLA" onclick="openModal('images/Forest.png')">
+									<img src="images/Storm-thumbnail.png" alt="ATLA" onclick="openModal('images/Storm.png')">
+									<img src="images/juice-thumbnail.jpg" alt="Orange Juice" onclick="openModal('images/juice.jpg')">
+									<img src="images/Glacier-thumbnail.png" alt="ATLA" onclick="openModal('images/Glacier.png')">
+									<img src="images/Volcano-thumbnail.png" alt="ATLA" onclick="openModal('images/Volcano.png')">
+									<img src="images/topazeye-thumbnail.jpg" alt="ATLA" onclick="openModal('images/topazeye.jpg')">
+									<img src="images/sakura-thumbnail.jpg" alt="Sakura" onclick="openModal('images/sakura.jpg')">
+								</div>
+
+								<p><br/>Here's some abstract stuffs. These are not necessarily good, but the colors are nice in my opinion. <i>Find my name in the first image!</i></p>
+
+								<div class="gallery">
+									<img src="images/mirror-thumbnail.jpg" alt="Mirrors" onclick="openModal('images/mirror.jpg')">
+									<img src="images/abstract02-thumbnail.jpg" alt="Abstract02" onclick="openModal('images/abstract02.jpg')">
+									<img src="images/abstract01-thumbnail.jpg" alt="Abstract01" onclick="openModal('images/abstract01.jpg')">
+								</div>
+
+								<!-- <p><br/>I draw and sketch a lot when I'm bored in class. You can see here some of what I can find in a pile of shipwreck. But most of the sketches below are gifts for a friend or family on their birthday (gifts are not drawn in class, of course). And that Spongebob one was drawn in the spirit of meme.</p>
+								<div class="gallery">
+									<img src="images/sketch-whale.jpg" alt="Whale" onclick="openModal('images/sketch-whale.jpg')">
+									<img src="images/syafiq-sketch-thumbnail.jpg" alt="Ahmad Syafiq Sketch" onclick="openModal('images/syafiq-sketch.jpg')">
+									<img src="images/sketch-rk.jpg" alt="Hana" onclick="openModal('images/sketch-rk.jpg')">
+									<img src="images/sketch-mw.jpg" alt="Wulan" onclick="openModal('images/sketch-mw.jpg')">
+									<img src="images/sketch-rn.jpg" alt="Revilda" onclick="openModal('images/sketch-rn.jpg')">
+									<img src="images/sketch-ye.jpg" alt="Yusuf" onclick="openModal('images/sketch-ye.jpg')">
+									<img src="images/sketch-hn.jpg" alt="Hafiz" onclick="openModal('images/sketch-hn.jpg')">
+									<img src="images/sketch-kirizan.jpg" alt="Kirizan" onclick="openModal('images/sketch-kirizan.jpg')">
+									<img src="images/sketch-iori.jpg" alt="Iori" onclick="openModal('images/sketch-iori.jpg')">
+									<img src="images/oneshot.jpg" alt="Oneshot" onclick="openModal('images/oneshot.jpg')">
+								</div> -->
+
+								<p><br/>Let's look at photographs of flowers and moon, because why not. They're not drawings, but are so cool that I tempted to show off! The moon was photographed from the lens of a telescope when I was observing at <a href="https://www.instagram.com/imahnoong/" target="_blank"><i>Imah Noong</i></a> observatory and planetarium in Lembang, Bandung.</p>
+								
+								<div class="gallery">
+									<img src="images/flower-yellow.jpg" alt="flower-yellow" onclick="openModal('images/flower-yellow.jpg')">
+									<img src="images/imah-noong-thumbnail.jpg" alt="imah-noong" onclick="openModal('images/imah-noong.jpg')">
+									<img src="images/flower-blue.jpg" alt="flower-blue" onclick="openModal('images/flower-blue.jpg')">
+								</div>
+
+								<p><br/>I'm learning digital art and willing to make cuter drawings!<br />Now, don't you think <a href="#haiku">other form of art</a> would be awesome too?</p>
 								
 								<!-- Pop-up Modal -->
 								<div id="popup-modal" class="modal">
 									<span class="close" onclick="closeModal()">&times;</span>
 									<img id="popup-image" class="modal-content" src="" alt="">
 								</div>
-								<p><br/>I don't know but I really love drawing eyes, and I actually have a collection of eyes I doodled on Google Keep on the little screen of my phone when I was inspired by Avatar the Legend of Aang, so... yeah. And an addition of a turquoise eye I painted (doodled) with watercolor on a little piece of paper once upon a time.</p>
-								<div class="gallery">
-									<img src="images/Forest-thumbnail.png" alt="ATLA" onclick="openModal('images/Forest.png')">
-									<img src="images/Storm-thumbnail.png" alt="ATLA" onclick="openModal('images/Storm.png')">
-									<img src="images/Glacier-thumbnail.png" alt="ATLA" onclick="openModal('images/Glacier.png')">
-									<img src="images/Volcano-thumbnail.png" alt="ATLA" onclick="openModal('images/Volcano.png')">
-									<img src="images/topazeye-thumbnail.jpg" alt="ATLA" onclick="openModal('images/topazeye.jpg')">
-								</div>
-								<p><br/>Wait for more drawings! I'll upload them in no time.<br />Now, don't you think <a href="#haiku">other form of art</a> would be awesome too?</p>
 							</article>
 
 						<!-- Haiku -->
@@ -148,11 +185,11 @@ for c in range(nc):
                     <blockquote>俳句とは<br />星空と海<br />僕と君</blockquote>
                   </div>
                 </div>
-								<p>Let's see if you can guess the theme in each one. Click any card to see the English version. Enjoy!</p>
+								<p>Let's see if you can guess the theme in each one. Click any card to see the English version. Enjoy! ___<i class="icon solid fa-pen-nib"></i></p>
                 <div class="card-container">
                   <div class="card">
                     <div class="front">
-                      <p><i class="icon solid fa-pen-nib"></i><br />一歩しか<br />動けず負たん<br />王様だ</p>
+                      <p><i class="icon solid fa-chess"></i><br />一歩しか<br />動けず負たん<br />王様だ</p>
                     </div>
                     <div class="back">
                       <p><i class="icon solid fa-quote-left"></i><br />A burden<br />That only move a step<br />The King, it is</p>
@@ -161,7 +198,7 @@ for c in range(nc):
 
                   <div class="card">
                     <div class="front">
-                      <p><i class="icon solid fa-pen-nib"></i><br />放課後の<br />オレンジ色に<br />石飛ばし</p>
+                      <p><i class="icon solid fa-shoe-prints"></i><br />放課後の<br />オレンジ色に<br />石飛ばし</p>
                     </div>
                     <div class="back">
                       <p><i class="icon solid fa-quote-left"></i><br />To the amber color<br />Of the after school sunset<br />Skipping stones</p>
@@ -170,7 +207,7 @@ for c in range(nc):
 
                   <div class="card">
                     <div class="front">
-                      <p><i class="icon solid fa-pen-nib"></i><br />漫画の中<br />広がる世界<br />魔法かな</p>
+                      <p><i class="icon solid fa-book-open"></i><br />漫画の中<br />広がる世界<br />魔法かな</p>
                     </div>
                     <div class="back">
                       <p><i class="icon solid fa-quote-left"></i><br />Within manga pages<br />A world unfolds before the eyes<br />I wonder if it's magic</p>
@@ -179,7 +216,7 @@ for c in range(nc):
 
                   <div class="card">
                     <div class="front">
-                      <p><i class="icon solid fa-pen-nib"></i><br />にぎやかな<br />光の都<br />見えず星</p>
+                      <p><i class="icon solid fa-city"></i><br />にぎやかな<br />光の都<br />見えず星</p>
                     </div>
                     <div class="back">
                       <p><i class="icon solid fa-quote-left"></i><br />Bustling<br />City of light<br />Unseen stars</p>
@@ -188,7 +225,7 @@ for c in range(nc):
 
                   <div class="card">
                     <div class="front">
-                      <p><i class="icon solid fa-pen-nib"></i><br />駅メロディ<br />駆け込み乗車<br />雨しずく</p>
+                      <p><i class="icon solid fa-train"></i><br />駅メロディ<br />駆け込み乗車<br />雨しずく</p>
                     </div>
                     <div class="back">
                       <p><i class="icon solid fa-quote-left"></i><br />Station melody<br />Rushing to catch the train<br />Raindrops</p>
@@ -197,7 +234,7 @@ for c in range(nc):
 
                   <div class="card">
                     <div class="front">
-                      <p><i class="icon solid fa-pen-nib"></i><br />梅雨の雨<br />音が癒しが<br />どろだらけ</p>
+                      <p><i class="icon solid fa-cloud-rain"></i><br />梅雨の雨<br />音が癒しが<br />どろだらけ</p>
                     </div>
                     <div class="back">
                       <p><i class="icon solid fa-quote-left"></i><br />Rains on rainy season<br />Soothing sounds<br />And muddy</p>
@@ -206,7 +243,7 @@ for c in range(nc):
 
                   <div class="card">
                     <div class="front">
-                      <p><i class="icon solid fa-pen-nib"></i><br />遊んだり<br />遊ばされたり<br />この社会</p>
+                      <p><i class="icon solid fa-users"></i><br />遊んだり<br />遊ばされたり<br />この社会</p>
                     </div>
                     <div class="back">
                       <p><i class="icon solid fa-hat-wizard"></i><br />I'm sorry, but<br />I'm too scared<br />To show the meaning</p>
@@ -215,7 +252,7 @@ for c in range(nc):
 
                   <div class="card">
                     <div class="front">
-                      <p><i class="icon solid fa-pen-nib"></i><br />舞い落ちて<br />ささやく桜<br />春の歌</p>
+                      <p><i class="icon solid fa-wind"></i><br />舞い落ちて<br />ささやく桜<br />春の歌</p>
                     </div>
                     <div class="back">
                       <p><i class="icon solid fa-quote-left"></i><br />Petals flutter down<br />Whispering cherry blossoms<br />Springs lullaby</p>
@@ -224,7 +261,7 @@ for c in range(nc):
 
                   <div class="card">
                     <div class="front">
-                      <p><i class="icon solid fa-pen-nib"></i><br />バレー部と<br />汗と笑顔で<br />青春だ</p>
+                      <p><i class="icon fa-sun"></i><br />バレー部と<br />汗と笑顔で<br />青春だ</p>
                     </div>
                     <div class="back">
                       <p><i class="icon solid fa-quote-left"></i><br />Alongside with the volleyball club<br />And with sweat and smiles<br />And that is youth</p>
@@ -233,7 +270,7 @@ for c in range(nc):
 
                   <div class="card">
                     <div class="front">
-                      <p><i class="icon solid fa-pen-nib"></i><br />春の海<br />ひねもすのたり<br />流れ寄る</p>
+                      <p><i class="icon solid fa-water"></i><br />春の海<br />ひねもすのたり<br />流れ寄る</p>
                     </div>
                     <div class="back">
                       <p><i class="icon solid fa-quote-left"></i><br />The calm sea of spring<br />All day long, peacefully<br />Drifting to the shore</p>
@@ -242,7 +279,7 @@ for c in range(nc):
 
                   <div class="card">
                     <div class="front">
-                      <p><i class="icon solid fa-pen-nib"></i><br />大人もね<br />かくれんぼして<br />宿敵と</p>
+                      <p><i class="icon solid fa-user-ninja"></i><br />大人もね<br />かくれんぼして<br />宿敵と</p>
                     </div>
                     <div class="back">
                       <p><i class="icon solid fa-hat-wizard"></i><br />I'm sorry, but<br />I'm too scared<br />To show the meaning</p>
@@ -251,7 +288,7 @@ for c in range(nc):
 
                   <div class="card">
                     <div class="front">
-                      <p><i class="icon solid fa-pen-nib"></i><br />妹の<br />友おり守り<br />お姉ちゃんは</p>
+                      <p><i class="icon solid fa-heart"></i><br />妹の<br />友おり守り<br />お姉ちゃんは</p>
                     </div>
                     <div class="back">
                       <p><i class="icon solid fa-quote-left"></i><br />Little sister's<br />Friend and guardian<br />Big sister is</p>
@@ -260,7 +297,7 @@ for c in range(nc):
 
                   <div class="card">
                     <div class="front">
-                      <p><i class="icon solid fa-pen-nib"></i><br />世界には<br />おどって笑え<br />できる内</p>
+                      <p><i class="icon solid fa-star-of-life"></i><br />世界には<br />おどって笑え<br />できる内</p>
                     </div>
                     <div class="back">
                       <p><i class="icon solid fa-quote-left"></i><br />In this world<br />Dance and laugh<br />While the moment lasts</p>
@@ -269,7 +306,7 @@ for c in range(nc):
 
                   <div class="card">
                     <div class="front">
-                      <p><i class="icon solid fa-pen-nib"></i><br />怖さあり<br />美しさあり<br />自然とは</p>
+                      <p><i class="icon solid fa-leaf"></i><br />怖さあり<br />美しさあり<br />自然とは</p>
                     </div>
                     <div class="back">
                       <p><i class="icon solid fa-quote-left"></i><br />There is fear<br />There is beauty<br />Such is nature</p>
@@ -278,7 +315,7 @@ for c in range(nc):
 
                   <div class="card">
                     <div class="front">
-                      <p><i class="icon solid fa-pen-nib"></i><br />羽ばたきな<br />飛べ跳ね回れ<br />幸せに</p>
+                      <p><i class="icon solid fa-dove"></i><br />羽ばたきな<br />飛べ跳ね回れ<br />幸せに</p>
                     </div>
                     <div class="back">
                       <p><i class="icon solid fa-quote-left"></i><br />Spread your wings<br />Soar and frisk around<br />May happiness be with you</p>
@@ -292,7 +329,7 @@ for c in range(nc):
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<p>Feel free to send me a message — no need to leave your name!<br />I'll reach to you only if you provide me with an email.</p>
+								<p>Feel free to send me a message — no need to leave your name!</p>
 								<form action="https://formspree.io/f/xrbboydr" method="post" id="contact-form">
 									<div class="fields">
 										<div class="field half">
@@ -301,7 +338,7 @@ for c in range(nc):
 										</div>
 										<div class="field half">
 											<label for="email">Email</label>
-											<input type="text" name="email" id="email" placeholder="giogio@example.com" />
+											<input type="text" name="email" id="email" placeholder="Put an email and I'll reach to you..." />
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
